--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ Features:
 <li> backup you keyring</li>
 <li> AND or OR mode for key choosing</li>
 <li> secret key will not be touched</li>
+<li> internationalization: German and French translations included</li>
 </ul>
 <h3>Download</h3>
 <ul>
