updated to version 0.4

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ Features:
 </ul>
 <h3>Download</h3>
 <ul>
-<li><a href="https://github.com/downloads/Nudin/GnuPGP-Tools/gpgkeymgr-0.3.tar.gz">Download version 0.3</a> (tar.gz, 37 KB), <a href="https://github.com/downloads/Nudin/GnuPGP-Tools/gpgkeymgr-0.3.tar.gz.sha256">sha256</a>, <a href="https://github.com/downloads/Nudin/GnuPGP-Tools/gpgkeymgr-0.3.tar.gz.sig">sig</a></li>
+<li><a href="gpgkeymgr/gpgkeymgr-0.4.tar.gz">Download version 0.4</a> (tar.gz, 40 KB), <a href="gpgkeymgr/gpgkeymgr-0.4.tar.gz.sha256">sha256</a>, <a href="gpgkeymgr/gpgkeymgr-0.4.tar.gz.sig">sig</a></li>
 <li>or get latest version from <a href="http://github.com/Nudin/GnuPGP-Tools/gpgkeymgr">Github</a></li>
 </ul>
 
